[#152128336] wrapt with love links

--- a/app/assets/stylesheets/modules/_checkout.scss
+++ b/app/assets/stylesheets/modules/_checkout.scss
@@ -141,6 +141,7 @@
 .co-ro-item__img {
   display: inline-block;
   width: 19%;
+  max-width: 120px;
   overflow: hidden;
   vertical-align: middle;
   padding-right: 16px;
