--- a/app/views/my_account/orders/show.haml
+++ b/app/views/my_account/orders/show.haml
@@ -1,6 +1,5 @@
 .container
   = render 'header'
-
   .row
     .col-xs-12.col-md-10.col-md-offset-1
       .outline-container.outline-container__light-fade.mb2
@@ -8,11 +7,12 @@
         - @order.line_items.each do |item|
           - gift = item.orderable
           .outline-container__section
-            = render 'ecommerce/checkout/edit_review_gift', gift: gift, customer_order: @order, edit_gift_wrapt: false
+            = render 'ecommerce/checkout/edit_review_gift', gift: gift, customer_order: @order, show_price: true, show_order_status: false
       .row
         .col-xs-12.col-md-8
           .outline-container.outline-container__light-fade
             .outline-container__section
+              = render 'ecommerce/checkout/wrapt_with_love', customer_order: @order, edit: false
               = render 'ecommerce/checkout/edit_review_detail_items', customer_order: @order
         .col-xs-12.col-md-4
           .outline-container
