[#152129433] Chat box WIP.

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,13 +9,14 @@
         %meta{name: "viewport", content: "width=device-width"}
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
     %meta{content: "IE=edge", "http-equiv": "X-UA-Compatible"}
-    = render 'layouts/google_analytics'
+    - if Rails.env.production?
+      = render 'layouts/google_analytics'
     = csrf_meta_tags
     = action_cable_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-
     %script(type="text/javascript" src="https://js.stripe.com/v3/")
+    = render 'shared/happy_fox'
 
     = render 'layouts/favicons'
     = render 'layouts/social_tags'
@@ -40,3 +41,9 @@
     = render 'pjax_modal_frame'
     = render_gift_basket if enable_gift_basket?
     = yield :page_js
+    - if enable_chat?
+      %script
+        window.show_chat = true;
+    - else
+      %script
+        window.show_chat = false;
