--- a/app/views/my_account/giftees/_header.haml
+++ b/app/views/my_account/giftees/_header.haml
@@ -1,15 +1,15 @@
 - title_action = capture_haml do
   .wrapt-dropdown
-    = link_to '#my-account-giftees__filters', role: 'button', data: {toggle: 'collapse'}, class: 'ma-filter-toggle__link', 'aria-expanded' => false, 'aria-controls' => 'my-account-giftees__filters' do
-      TODO: Filters
-      = embedded_svg('icon-arrow-down')
+    -#= link_to '#my-account-giftees__filters', role: 'button', data: {toggle: 'collapse'}, class: 'ma-filter-toggle__link', 'aria-expanded' => false, 'aria-controls' => 'my-account-giftees__filters' do
+    -#  TODO: Filters
+    -#  = embedded_svg('icon-arrow-down')
     .blue-dropdown__content.right.ma-filters#my-account-giftees__filters.collapse
       :ruby
         options = [
           ['TODO: Filters', 'all']
         ]
       - options.each do |option|
-        = link_to my_account_giftees_path() do 
+        = link_to my_account_giftees_path() do
           = option[0]
 - page_header_action = capture_haml do
   = link_to 'New Giftee', 'javascript:alert("TODO");', class: 'btn btn-sm btn-primary uppercase hidden-xs'
