--- a/app/views/my_account/giftees/_giftee.haml
+++ b/app/views/my_account/giftees/_giftee.haml
@@ -18,5 +18,6 @@
     - else
       :ruby
         question_response = giftee.first_unanswered_response
-      = link_to giftee_survey_question_path(giftee_id: giftee.id, survey_id: question_response.survey_response_id, id: question_response.to_param), class: 'btn btn-default btn-block' do
-        COMPLETE THE QUIZ
+      - if question_response.present?
+        = link_to giftee_survey_question_path(giftee_id: giftee.id, survey_id: question_response.survey_response_id, id: question_response.to_param), class: 'btn btn-default btn-block' do
+          COMPLETE THE QUIZ
