--- a/app/views/admin/gifts/show.html.haml
+++ b/app/views/admin/gifts/show.html.haml
@@ -22,8 +22,8 @@
 
     %p
       %b Tax Code:
-      = @gift.tax_code.code
-      (#{@gift.tax_code.name})
+      = @gift.tax_code&.code
+      (#{@gift.tax_code&.name})
 
     %p
       %b Selling price:
