--- a/app/views/admin/products/index.html.haml
+++ b/app/views/admin/products/index.html.haml
@@ -13,6 +13,7 @@
         = form.search_field :keyword, placeholder: 'Title or SKU', class: 'form-control', style: 'min-width: 300px;'
         = form.collection_select :product_category_id, ProductCategory.categories, :id, :name, {prompt: 'Category'}, class: 'form-control', data: {behavior: 'product-category-input'}
         = form.collection_select :product_subcategory_id, ProductCategory.subcategories.where(parent_id: @product_search.product_category_id), :id, :name, {prompt: 'Sub-category'}, class: 'form-control', data: {behavior: 'product-subcategory-input'}
+        = form.collection_select :vendor_id, Vendor.all, :id, :name, {prompt: 'Vendor'}, class: 'form-control'
         %button.btn.btn-primary
           %i.glyphicon.glyphicon-search
           Search
