--- a/app/views/gift_selections/_gift_basket.haml
+++ b/app/views/gift_selections/_gift_basket.haml
@@ -25,7 +25,8 @@
         in your cart
 
       - if ENV.fetch('CHECKOUT_ENABLED') { 'false' } == 'true'
-        = link_to 'CHECK OUT', ecommerce_checkout_start_path(giftee_id: profile.id), class: 'btn btn-primary btn-full-width btn-gift-basket-submit', id: 'js-checkout', method: :patch
+        - if profile.gift_selections.count > 0
+          = link_to 'CHECK OUT', ecommerce_checkout_start_path(giftee_id: profile.id), class: 'btn btn-primary btn-full-width btn-gift-basket-submit', id: 'js-checkout', method: :patch
       - else
         = link_to 'CHECK OUT COMING SOON', 'javascript:void(0)', class: 'btn btn-primary btn-full-width btn-gift-basket-submit'
 
