[NO STORY] Gift basket slide-out with giftee's name

--- a/app/views/gift_selections/_index.haml
+++ b/app/views/gift_selections/_index.haml
@@ -1,4 +1,4 @@
-%h3.gift-basket-gifts__heading Gift Basket
+%h3.gift-basket-gifts__heading #{profile.name}'s Gift Basket
 - selections = profile.gift_selections.preload(gift: :primary_gift_image)
 - if selections.length == 0
   %p Your Gift Basket is Empty
