--- a/app/views/admin/gifts/index.html.haml
+++ b/app/views/admin/gifts/index.html.haml
@@ -39,7 +39,7 @@
           = form.text_field :max_price, placeholder: 'Max Price', class: 'form-control'
           .input-group-addon .00
       .form-group
-        
+
         %button.btn.btn-primary.pull-right{style: "margin-left: 6px;"}
           %i.glyphicon.glyphicon-search
           Search
@@ -61,7 +61,7 @@
               %h4.admin-index-table--item-title
                 = gift.wrapt_sku
                 (#{number_to_currency gift.selling_price})
-                
+
               %table
                 %tr
                   %td.admin-index-table--categories-cell
@@ -77,9 +77,11 @@
             %td
               - if gift.primary_gift_image.present?
                 = image_tag gift.primary_gift_image.image_url(:small), class: 'admin-index-table--image'
-              %h4.admin-index-table--item-title= gift.title
+              %h4.admin-index-table--item-title
+                = gift.title
+                %em{style: 'font-weight: normal;'} (#{gift.vendor.name})
               .admin-index-table--item-description= gift.description
-                    
+
 
             %td.admin-index-table--buttons-cell(style="line-height: 24px; text-align: left;")
               = link_to 'View', [:admin, gift], class: 'btn btn-default btn-xs'
