--- a/app/views/survey_response_completions/show.haml
+++ b/app/views/survey_response_completions/show.haml
@@ -7,8 +7,15 @@
 
       = simple_form_for @survey_response_completion, url: with_invitation_scope(giftee_survey_completion_path(@profile, @survey_response)), html: {class: 'quiz-complete__form'} do |form|
         .pa4
-          - unless current_user.active?
-            %h4 Create Your Account
+          - unless current_user&.active?
+            .row
+              .col-sm-6
+                %h4 Create Your Account
+              .col-sm-6{style: 'text-align: right'}
+                Already Have an Account?
+                = link_to new_user_session_path, data: {loads_in_pjax_modal: true, toggle: "fade out", target: '.top-navigation__menu'} do
+                  Sign In
+
             .row
               .col-sm-6
                 = form.input :user_first_name, label: 'First Name'
