--- a/app/views/admin/gifts/index.html.haml
+++ b/app/views/admin/gifts/index.html.haml
@@ -71,16 +71,18 @@
                       %span.label.label-default= gift.product_subcategory&.name
                     - if gift.featured?
                       %span.label.label-default featured
-                    %br
-                    - gift.tags.each do |tag|
-                      %span.label.label-primary.label-inverse= tag.name
             %td
               - if gift.primary_gift_image.present?
                 = image_tag gift.primary_gift_image.image_url(:small), class: 'admin-index-table--image'
               %h4.admin-index-table--item-title
                 = gift.title
                 %em{style: 'font-weight: normal;'} (#{gift.vendor.name})
-              .admin-index-table--item-description= gift.description
+              .admin-index-table--item-description
+                = gift.description
+                - if gift.tags.any?
+                  %br
+                  - gift.tags.sort_by(&:name).each do |tag|
+                    %span.label.label-primary.label-inverse= tag.name
 
 
             %td.admin-index-table--buttons-cell(style="line-height: 24px; text-align: left;")
