header width change [#151956544]

--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -357,11 +357,9 @@ body.home,
 .home {
   margin-bottom: 0;
 }
-.home .top-navigation__container,
+.top-navigation__container,
 .home .container,
 .profiles .container,
-.profiles .top-navigation__container,
-.my_account .top-navigation__container,
 .my_account .container {
   width: 100%;
   @media (min-width: 1140px) {
