--- a/app/assets/stylesheets/modules/_nav.scss
+++ b/app/assets/stylesheets/modules/_nav.scss
@@ -45,8 +45,9 @@
 
 .top-navigation__container {
   padding: 10px 15px;
-  @media (min-width: $screen-sm-min) {
-    width: 100%;
+  width: 100%;
+  @media (min-width: 1140px) {
+    width: 1140px;
     height: 120px;
     padding: 30px 15px;
   }
