show giftee name on Gift Wrapt screen [#152159466]

--- a/app/views/ecommerce/checkout/_edit_gift_wrapt_form.haml
+++ b/app/views/ecommerce/checkout/_edit_gift_wrapt_form.haml
@@ -5,7 +5,9 @@
     = f.input :gift_wrapt, as: :wrapt_radio_toggle, collection: [['Wrapt With Love', true], ['Do Not Gift Wrapt', false]], label: false
   .j-co-gift-wrapt__note-1{style: f.object.gift_wrapt? ? '' : 'display: none;'}
     .co-add-a-note
-      %h4.light Add a Note
+      %h4.light 
+        Add a Note for 
+        =@profile.name
       -# FYI: this checkbox is checked on false!
       = f.input :include_note, as: :wrapt_styled_checkbox, label: 'Do not include a note', checked_value: 0, unchecked_value: 1
     .j-co-gift-wrapt__note-2{style: f.object.include_note? ? '' : 'display: none;'}
