add complimentary wording to checkout gift wrapt step

--- a/app/assets/stylesheets/modules/_checkout.scss
+++ b/app/assets/stylesheets/modules/_checkout.scss
@@ -236,8 +236,11 @@
     float: right;
   }
 }
-
 .co-ro-summary__item:last-child {
+  margin-bottom: 40px;
+}
+.co-paragraph {
+  margin-top: -20px;
   margin-bottom: 40px;
 }
 
