gift list is always a single div without a length. Pass in gift count to the constructor

--- a/app/views/gift_selections/_gift_basket.haml
+++ b/app/views/gift_selections/_gift_basket.haml
@@ -32,4 +32,4 @@
 
 - content_for :page_js do
   :javascript
-    new App.GiftBasket()
+    new App.GiftBasket({num_gifts: #{profile.gift_selections.count}})
